syntax = "proto3";
package routerprotocol.routerchain.attestation;

option go_package = "github.com/router-protocol/sdk-go/routerchain/attestation/types";

import "multichain/chain_type.proto"; 
import "attestation/bridge_validator.proto";
import "attestation/valset_updated_claim_status.proto"; 
import "gogoproto/gogo.proto";

message ValsetUpdatedClaim {
  string chainId = 1; 
  uint64 eventNonce = 2; 
  uint64 valsetNonce = 3; 
  uint64 blockHeight = 4; 
  string sourceTxHash = 5;
  ValsetUpdatedClaimStatus status = 6;   
}

message ValsetUpdatedClaimHash {  
  string chainId = 1; 
  uint64 eventNonce = 2; 
  uint64 valsetNonce = 3; 
  uint64 blockHeight = 4; 
  repeated BridgeValidator members = 5 [(gogoproto.nullable) = false];
  string sourceTxHash = 6;  
}